--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Coming Soon</h1>
+        <h1>Coming Soon !!!</h1>
         <p>We're working on something awesome! Stay tuned for updates.</p>
         <p>Follow us on social media for the latest news:</p>
         <ul>
